install-kubeflow/knative/auth-v1-test/engines-no-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: engines-no-auth
  namespace: aiops
spec:
  selector:
    matchLabels:
      app.kubernetes.io/part-of: aiops
  jwtRules: []
