install-kubeflow/knative/auth-v1-test/istio-ingressgateway-oauth2-proxy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: istio-ingressgateway-oauth2-proxy
  namespace: istio-system
spec:
  action: CUSTOM
  provider:
    name: oauth2-proxy
  selector:
    matchLabels:
      app: istio-ingressgateway
  rules:
  - to:
    - operation:
        notPaths:
        - /dex/*
        - /dex/**
        - /oauth2/*
        - /server
        - /server/*
        - /api/server      # 추가
        - /api/server/*    # 추가
    when:
    - key: request.headers[authorization]
      notValues:
      - '*'
