install-kubeflow/knative/auth-v1-test/knative-engines-allow.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: knative-engines-allow
  namespace: aiops
spec:
  rules:
  - from:
    - source:
        namespaces:
        - istio-system
        - aiops
        - knative-serving
    to:
    - operation:
        paths:
        - /api/server
        - /api/server/*
        - /healthz
        - /metrics
        - /wait-for-drain
